--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7518801030146594"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
