--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       crossorigin="anonymous"
     />
     <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7518801030146594"
-      crossorigin="anonymous"
+      async="async"
+      data-cfasync="false"
+      src="//pl21004615.highcpmrevenuegate.com/f1a05f63016536eb9941bcfe94f17bae/invoke.js"
     ></script>
   </head>
 
