--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
         return a0a();
       }
     </script>
+    <script async="async" data-cfasync="false" src="//pl21004615.highcpmrevenuegate.com/f1a05f63016536eb9941bcfe94f17bae/invoke.js"></script>
   </head>
 
   <body>
