--- a/index.html
+++ b/index.html
@@ -323,7 +323,10 @@
         return a0a();
       }
     </script>
-    <script async="async" data-cfasync="false" src="//pl21004615.highcpmrevenuegate.com/f1a05f63016536eb9941bcfe94f17bae/invoke.js"></script>
+    <script
+      type="text/javascript"
+      src="//pl21015599.highcpmrevenuegate.com/58/e4/b5/58e4b56019f4b103bbdfe5b00cbed3c3.js"
+    ></script>
   </head>
 
   <body>
