--- a/index.html
+++ b/index.html
@@ -1,337 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Clean Code - Web Development Exercises and Quizzes</title>
-    <meta
-      name="description"
-      content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills."
-    />
-    <meta
-      name="keywords"
-      content="clean code, web development exercises, HTML exercises, CSS exercises, JavaScript exercises, web development quizzes"
-    />
-    <meta name="author" content="Clean-code" />
-    <link rel="icon" type="image/svg+xml" href="/cleanCode.svg" />
-    <link rel="apple-touch-icon" href="/cleanCode.svg" />
-    <meta name="theme-color" content="#264653" />
-    <meta
-      name="robots"
-      content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"
-    />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="upgrade-insecure-requests"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Open Graph meta tags -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://clean-code.io/" />
-    <meta
-      property="og:title"
-      content="Clean Code - Web Development Exercises and Quizzes"
-    />
-    <meta
-      property="og:description"
-      content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills."
-    />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/djkdk03mf/image/upload/v1690372716/Screenshot_5_wvkhfn.png"
-    />
-    <meta property="og:image:width" content="1100" />
-    <meta property="og:image:height" content="323" />
+  <title>Clean Code - Web Development Exercises and Quizzes</title>
+  <meta name="description"
+    content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills." />
+  <meta name="keywords"
+    content="clean code, web development exercises, HTML exercises, CSS exercises, JavaScript exercises, web development quizzes" />
+  <meta name="author" content="Clean-code" />
+  <link rel="icon" type="image/svg+xml" href="/cleanCode.svg" />
+  <link rel="apple-touch-icon" href="/cleanCode.svg" />
+  <meta name="theme-color" content="#264653" />
+  <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
-    <!-- Twitter Card meta tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://clean-code.io/" />
-    <meta
-      name="twitter:title"
-      content="Clean Code - Web Development Exercises and Quizzes"
-    />
-    <meta
-      name="twitter:description"
-      content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills."
-    />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/djkdk03mf/image/upload/v1690372716/Screenshot_5_wvkhfn.png"
-    />
+  <!-- Open Graph meta tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://clean-code.io/" />
+  <meta property="og:title" content="Clean Code - Web Development Exercises and Quizzes" />
+  <meta property="og:description"
+    content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills." />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/djkdk03mf/image/upload/v1690372716/Screenshot_5_wvkhfn.png" />
+  <meta property="og:image:width" content="1100" />
+  <meta property="og:image:height" content="323" />
 
-    <!-- Google Tag Manager (optional) -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-MWG27CVNL6"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-MWG27CVNL6");
-    </script>
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://clean-code.io/" />
+  <meta name="twitter:title" content="Clean Code - Web Development Exercises and Quizzes" />
+  <meta name="twitter:description"
+    content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills." />
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/djkdk03mf/image/upload/v1690372716/Screenshot_5_wvkhfn.png" />
 
-    <!-- External CSS (Font Awesome) -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <script type="text/javascript">
-      (function (a, b) {
-        var z = a0b,
-          c = a();
-        while (!![]) {
-          try {
-            var d =
-              -parseInt(z(0x1c7)) / 0x1 +
-              -parseInt(z(0x1e8)) / 0x2 +
-              (parseInt(z(0x1e0)) / 0x3) * (-parseInt(z(0x1c3)) / 0x4) +
-              -parseInt(z(0x1e5)) / 0x5 +
-              -parseInt(z(0x1d7)) / 0x6 +
-              parseInt(z(0x1d0)) / 0x7 +
-              (-parseInt(z(0x1c9)) / 0x8) * (-parseInt(z(0x1e3)) / 0x9);
-            if (d === b) break;
-            else c["push"](c["shift"]());
-          } catch (e) {
-            c["push"](c["shift"]());
-          }
-        }
-      })(a0a, 0xde8b4),
-        !(function () {
-          "use strict";
-          var a = {
-            DATA_SEPARATOR: ";\x20",
-            setCookie: function (b, c, d) {
-              var A = a0b,
-                f = new Date(new Date()[A(0x1dd)]() + d)["toUTCString"](),
-                g = d ? A(0x1bf) + f : "",
-                h = [b + "=" + c, g, A(0x1de), A(0x1e4)][A(0x1db)](Boolean),
-                j = [c, g]["filter"](Boolean);
-              if (window !== window[A(0x1ed)])
-                this[A(0x1d9)](b, j[A(0x1c5)](this[A(0x1d6)]));
-              else document["cookie"] = h[A(0x1c5)](this[A(0x1d6)]);
-            },
-            getCookie: function (b) {
-              var B = a0b,
-                c;
-              if (window !== window[B(0x1ed)]) {
-                c = this["localStorage"](b)
-                  [B(0x1df)]()
-                  [B(0x1da)](this[B(0x1d6)]);
-                for (var d = 0x0; d < c[B(0x1d4)]; d += 0x1)
-                  if ("expires" === c[d]["split"]("=")[0x0]) {
-                    if (
-                      Date["parse"](c[d][B(0x1da)]("=")[0x1]) < Date[B(0x1ec)]()
-                    )
-                      return this[B(0x1c8)](b), ![];
-                    else return c[0x0];
-                  }
-              } else {
-                c = document["cookie"][B(0x1da)](this[B(0x1d6)]);
-                for (var f = 0x0; f < c["length"]; f += 0x1)
-                  if (c[f][B(0x1da)]("=")[0x0] === b)
-                    return c[f]["split"]("=")[0x1];
-              }
-              return ![];
-            },
-            setStorage: function (b, c) {
-              var C = a0b;
-              if (this[C(0x1d3)]()) {
-                if (window[C(0x1c2)])
-                  return window[C(0x1c2)]["setItem"](b, c), !![];
-                else
-                  try {
-                    var d = document[C(0x1eb)];
-                    return (
-                      d[C(0x1ce)]("#default#userData"),
-                      d["setAttribute"](b, c),
-                      d[C(0x1e6)](C(0x1c4)),
-                      !![]
-                    );
-                  } catch (f) {
-                    return ![];
-                  }
-              }
-            },
-            localStorage: function (b) {
-              var D = a0b,
-                c;
-              if (window[D(0x1c2)]) {
-                if (((c = window["localStorage"][D(0x1ef)](b)), c)) return c;
-                else return ![];
-              } else {
-                var d = document[D(0x1eb)];
-                try {
-                  if (
-                    (d[D(0x1ce)](D(0x1d8)),
-                    d[D(0x1d2)](D(0x1c4)),
-                    (c = d[D(0x1ca)](b)),
-                    c)
-                  )
-                    return c;
-                  else return ![];
-                } catch (f) {
-                  return ![];
-                }
-              }
-            },
-            storageDelete: function (b) {
-              var E = a0b;
-              if (window[E(0x1c2)]) {
-                if (window[E(0x1c2)][E(0x1cd)](b)) return !![];
-              }
-              var c = document["body"];
-              try {
-                return (
-                  c[E(0x1ce)](E(0x1d8)),
-                  c[E(0x1d2)](E(0x1c4)),
-                  c[E(0x1c6)](b),
-                  !![]
-                );
-              } catch (d) {
-                return ![];
-              }
-            },
-            isLocalStorageAvailable: function () {
-              var F = a0b;
-              try {
-                return (
-                  localStorage[F(0x1cb)](F(0x1c1), 0x1),
-                  localStorage["removeItem"]("storageSupport"),
-                  F(0x1c2) in window && null !== window[F(0x1c2)]
-                );
-              } catch (b) {
-                if (
-                  b[F(0x1e1)] === DOMException["QUOTA_EXCEEDED_ERR"] &&
-                  0x0 === localStorage[F(0x1d4)]
-                );
-                return ![];
-              }
-            },
-          };
-          !(function () {
-            var G = a0b,
-              b,
-              g = document[G(0x1e2)]("script"),
-              h = "test_variant",
-              j = G(0x1cf),
-              k = j[G(0x1be)](0x0, 0x2),
-              m = j[G(0x1be)](0x2, 0x4),
-              p = j[G(0x1be)](0x4, 0x6),
-              q = a[G(0x1c0)](h);
-            if (![] === q)
-              (b = Math[G(0x1bb)]()),
-                a["setCookie"](h, b, 0x7 * 0x18 * 0x3c * 0x3c * 0x3e8);
-            else b = Number(q[G(0x1da)](",")[0x0]);
-            var v,
-              w = "/" + k + "/" + m + "/" + p + "/" + j + ".js",
-              x = btoa(w),
-              y = G(0x1ee);
-            if (b < 0.5) (y += w), (v = G(0x1e7));
-            else (y = y + "/api/posts?token=" + x), (v = G(0x1d5));
-            g["setAttribute"](G(0x1bd), v),
-              g[G(0x1e9)](G(0x1dc), y),
-              window["addEventListener"](G(0x1cc), function () {
-                var H = G;
-                if (
-                  null === document[H(0x1eb)][H(0x1bc)](H(0x1ea) + v + "\x22]")
-                )
-                  document[H(0x1eb)][H(0x1d1)](g);
-              });
-          })();
-        })();
-      function a0b(a, b) {
-        var c = a0a();
-        return (
-          (a0b = function (d, e) {
-            d = d - 0x1bb;
-            var f = c[d];
-            return f;
-          }),
-          a0b(a, b)
-        );
-      }
-      function a0a() {
-        var I = [
-          "removeAttribute",
-          "1102323hoFqvs",
-          "storageDelete",
-          "8CwfzJA",
-          "getAttribute",
-          "setItem",
-          "DOMContentLoaded",
-          "removeItem",
-          "addBehavior",
-          "58e4b56019f4b103bbdfe5b00cbed3c3",
-          "1279544gtzgLY",
-          "appendChild",
-          "load",
-          "isLocalStorageAvailable",
-          "length",
-          "CF-2371-5_1",
-          "DATA_SEPARATOR",
-          "2740428FqQKnN",
-          "#default#userData",
-          "setStorage",
-          "split",
-          "filter",
-          "src",
-          "getTime",
-          "path=/",
-          "toString",
-          "237hqlfLD",
-          "code",
-          "createElement",
-          "57315771ynqewD",
-          "SameSite=Lax",
-          "6685500xpkHjN",
-          "save",
-          "CF-2371-5_0",
-          "2403334WLrkTa",
-          "setAttribute",
-          "script[data-domain=\x22",
-          "body",
-          "now",
-          "top",
-          "//pl21015599.highcpmrevenuegate.com",
-          "getItem",
-          "random",
-          "querySelector",
-          "data-domain",
-          "substring",
-          "expires=",
-          "getCookie",
-          "storageSupport",
-          "localStorage",
-          "78068kcAvEH",
-          "auth",
-          "join",
-        ];
-        a0a = function () {
-          return I;
-        };
-        return a0a();
-      }
-    </script>
-  </head>
+  <!-- Google Tag Manager (optional) -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MWG27CVNL6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-MWG27CVNL6");
+  </script>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- External CSS (Font Awesome) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <script
+    type="text/javascript"> adroll_adv_id = "MKKO5NZG65BBBDSXFZNLDH"; adroll_pix_id = "W4JDFCCQZZG5XIQS6JRIMW"; adroll_version = "2.0"; (function (w, d, e, o, a) { w.__adroll_loaded = true; w.adroll = w.adroll || []; w.adroll.f = ['setProperties', 'identify', 'track']; var roundtripUrl = "https://s.adroll.com/j/" + adroll_adv_id + "/roundtrip.js"; for (a = 0; a < w.adroll.f.length; a++) { w.adroll[w.adroll.f[a]] = w.adroll[w.adroll.f[a]] || (function (n) { return function () { w.adroll.push([n, arguments]) } })(w.adroll.f[a]) } e = d.createElement('script'); o = d.getElementsByTagName('script')[0]; e.async = 1; e.src = roundtripUrl; o.parentNode.insertBefore(e, o); })(window, document); adroll.track("pageView"); </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
