not done with payment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <meta name="64681688b0327c0175986efc3e1af941df48c08b" content="64681688b0327c0175986efc3e1af941df48c08b" />
   <title>Clean Code - Web Development Exercises and Quizzes</title>
   <meta name="description"
     content="Practice HTML, CSS, JavaScript, and other web development topics with Clean Code. Access exercises and quizzes to enhance your web development skills." />
