--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <script
+      async="async"
+      data-cfasync="false"
+      src="//pl21004615.toprevenuegate.com/f1a05f63016536eb9941bcfe94f17bae/invoke.js"
+    ></script>
     <script type="text/javascript">
       var infolinks_pid = 3407846;
       var infolinks_wsid = 0;
